welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:10: error: unclosed string literal
  return "7:00""
               ^alarmClock:10: error: ';' expected but something found.
  return "7:00""
               ^